test/type-error-4.err.expect
test/type-error-4.ktn:1:1: error: cannot match scalar type t1? with [t2]
test/type-error-4.ktn:1:9: note: [t2] (input to foo) is from here
test/type-error-4.ktn:2:10: note: t1 is from here
